--- a/src/Project/D3/code/App_Config/Include/Project/z.Sitecore.Demo.Group.DevSettings.config
+++ b/src/Project/D3/code/App_Config/Include/Project/z.Sitecore.Demo.Group.DevSettings.config
@@ -1,10 +1,14 @@
 <?xml version="1.0"?>
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
   <sitecore>
-    <sc.variable name="sitecore.demo.D3.sourceFolder" value="C:\Projects\Sitecore.Demo.D3\src" />
+    <sc.variable name="sitecore.demo.group.sourceFolder" value="C:\Projects\Sitecore.Demo.Group\src" />
     <sites>
-      <site name="D3">
+      <site name="group">
         <patch:attribute name="database">master</patch:attribute>
+      </site>
+      <site name="sweden">
+        <patch:attribute name="database">master</patch:attribute>
+      <patch:attribute name="dictionaryAutoCreate">true</patch:attribute>
       </site>
     </sites>
   </sitecore>
