--- a/src/Project/D3/code/bower.json
+++ b/src/Project/D3/code/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "sitecore.demo.D3",
+    "name": "sitecore.demo.group",
     "homepage": "https://github.com/Sitecore/Habitat",
     "authors": [
         "Thomas Eldblom <the@sitecore.net>"
