--- a/src/Project/D3/code/Sitecore.Demo.D3.csproj
+++ b/src/Project/D3/code/Sitecore.Demo.D3.csproj
@@ -149,9 +149,9 @@
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="App_Config\Include\Project\Sitecore.Demo.Group.config" />
-    <Content Include="App_Config\Include\Project\Sitecore.Demo.Group.Serialization.config" />
-    <Content Include="App_Config\Include\Project\z.Sitecore.Demo.Group.DevSettings.config">
+    <Content Include="App_Config\Include\Project\Sitecore.Demo.D3.config" />
+    <Content Include="App_Config\Include\Project\Sitecore.Demo.D3.Serialization.config" />
+    <Content Include="App_Config\Include\Project\z.Sitecore.Demo.D3.DevSettings.config">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="App_Config\Security\domains.config.transform" />
