--- a/src/Feature/D3Identity/code/Sitecore.Feature.D3Identity.csproj
+++ b/src/Feature/D3Identity/code/Sitecore.Feature.D3Identity.csproj
@@ -136,11 +136,14 @@
     <Content Include="App_Config\Include\Unicorn\Unicorn.AutoPublish.config" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="PublishProfiles\Local.pubxml" />
+    <Content Include="Views\Logo.cshtml" />
+    <Content Include="Views\Copyright.cshtml" />
+    <Content Include="Views\ContactInformation.cshtml" />
     <None Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Template.cs" />
+    <Compile Include="Templates.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Views\web.config" />
