--- a/src/Feature/D3Teasers/code/Sitecore.Feature.D3Teasers.csproj
+++ b/src/Feature/D3Teasers/code/Sitecore.Feature.D3Teasers.csproj
@@ -140,7 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Template.cs" />
+    <Compile Include="Templates.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Views\web.config" />
