--- a/src/Feature/D3Teasers/code/Sitecore.Feature.D3Teasers.csproj
+++ b/src/Feature/D3Teasers/code/Sitecore.Feature.D3Teasers.csproj
@@ -135,7 +135,7 @@
     <Content Include="App_Config\Include\Unicorn\Unicorn.config" />
     <Content Include="App_Config\Include\Unicorn\Unicorn.AutoPublish.config" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
-    <Content Include="Views\TitleImageSummaryTeaser.cshtml" />
+    <Content Include="Views\D3Teasers\TitleImageSummaryTeaser.cshtml" />
     <None Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -143,7 +143,7 @@
     <Compile Include="Templates.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Views\web.config" />
+    <None Include="Views\D3Teasers\web.config" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
