--- a/src/Feature/D3Identity/code/Sitecore.Feature.D3Identity.csproj
+++ b/src/Feature/D3Identity/code/Sitecore.Feature.D3Identity.csproj
@@ -158,6 +158,7 @@
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\D3Identity\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
