--- a/src/Foundation/Alerts/code/Sitecore.Foundation.Alerts.csproj
+++ b/src/Foundation/Alerts/code/Sitecore.Foundation.Alerts.csproj
@@ -25,6 +25,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -131,16 +132,6 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Dictionary\code\Sitecore.Foundation.Dictionary.csproj">
-      <Project>{0D6BA4D8-C469-4AE9-9EBB-93BDF7D7E78F}</Project>
-      <Name>Sitecore.Foundation.Dictionary</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\SitecoreExtensions\code\Sitecore.Foundation.SitecoreExtensions.csproj">
-      <Project>{b535703f-8d07-4f23-a533-2974bb4cc7b1}</Project>
-      <Name>Sitecore.Foundation.SitecoreExtensions</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
