--- a/src/Feature/PageContent/serialization/Templates/PageContent.yml
+++ b/src/Feature/PageContent/serialization/Templates/PageContent.yml
@@ -1,13 +1,9 @@
 ﻿---
-ID: "bd12d54e-881c-4b67-b83e-defc3fdf738c"
-Parent: "fa8de5b9-d5d8-40a7-866a-23af4f5a9629"
-Template: "e269fbb5-3750-427a-9149-7aa950b49301"
-Path: /sitecore/templates/Feature/Identity/_Identity/Organisation
+ID: "45744e23-a486-4bca-b333-e7b24b210cc7"
+Parent: "8f343079-3cc5-4ef7-bc27-32addb46f45e"
+Template: "0437fee2-44c9-46a6-abe9-28858d9fee8c"
+Path: /sitecore/templates/Feature/PageContent
 DB: master
-SharedFields:
-- ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
-  Hint: __Sortorder
-  Value: 200
 Languages:
 - Language: en
   Versions:
@@ -15,7 +11,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20160215T231234Z
+      Value: 20150824T162953Z
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
       Value: |
@@ -24,13 +20,13 @@ Languages:
   Fields:
   - ID: "b5e02ad9-d56f-4c41-a065-a133db87bdeb"
     Hint: __Display name
-    Value: 組織
+    Value: ページ コンテンツ
   Versions:
   - Version: 1
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20170323T054802Z
+      Value: 20170323T054817Z
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
       Value: |
