--- a/src/Feature/PageContent/serialization/Templates/PageContent/_HasPageContent/Content/Body.yml
+++ b/src/Feature/PageContent/serialization/Templates/PageContent/_HasPageContent/Content/Body.yml
@@ -1,43 +1,46 @@
 ﻿---
-ID: "efd4980a-030c-497c-8880-40b6030ac28b"
-Parent: "bd12d54e-881c-4b67-b83e-defc3fdf738c"
+ID: "d74f396d-5c5e-4916-bd0a-bfd58b6b1967"
+Parent: "24dd5b45-8c1e-47b9-ae47-b02cde8a4a87"
 Template: "455a3e98-a627-4b40-8035-e683a0331ac7"
-Path: /sitecore/templates/Feature/Identity/_Identity/Organisation/OrganisationName
+Path: /sitecore/templates/Feature/PageContent/_HasPageContent/Content/Body
 DB: master
 SharedFields:
+- ID: "1eb8ae32-e190-44a6-968d-ed904c794ebf"
+  Hint: Source
+  Value: 
 - ID: "ab162cc0-dc80-4abf-8871-998ee5d7ba32"
   Hint: Type
-  Value: "Single-Line Text"
+  Value: Rich Text
 - ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
   Hint: __Sortorder
-  Value: 100
+  Value: 250
 - ID: "dec8d2d5-e3cf-48b6-a653-8e69e2716641"
   Hint: __Security
   Value: |
-    ar|Everyone|pe|!*|+field:read|pd|!*|+field:read|ar|modules\Feature Identity Admin|pe|+field:write|pd|+field:write|
+    ar|modules\Feature PageContent Admin|pe|+field:write|pd|+field:write|ar|Everyone|pe|!*|+field:read|pd|!*|+field:read|
 Languages:
 - Language: en
   Fields:
   - ID: "19a69332-a23e-4e70-8d16-b2640cb24cc8"
     Hint: Title
-    Value: Name
+    Value: "Body - the main content of the item"
   Versions:
   - Version: 1
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20160215T231234Z
+      Value: 20130920T140202
 - Language: "ja-JP"
   Fields:
   - ID: "19a69332-a23e-4e70-8d16-b2640cb24cc8"
     Hint: Title
-    Value: 名前
+    Value: 本文
   Versions:
   - Version: 1
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20170323T054802Z
+      Value: 20170323T054817Z
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
       Value: |
