--- a/src/Feature/Identity/serialization/Templates/Identity/_Identity/Identity/Copyright.yml
+++ b/src/Feature/Identity/serialization/Templates/Identity/_Identity/Identity/Copyright.yml
@@ -20,7 +20,7 @@ Languages:
   Fields:
   - ID: "19a69332-a23e-4e70-8d16-b2640cb24cc8"
     Hint: Title
-    Value: "Copyright notice - will appear in the footer on every page"
+    Value: 
   Versions:
   - Version: 1
     Fields:
