--- a/src/Feature/PageContent/code/Sitecore.Feature.PageContent.csproj
+++ b/src/Feature/PageContent/code/Sitecore.Feature.PageContent.csproj
@@ -135,6 +135,8 @@
     <Content Include="Views\PageContent\PageAbout.cshtml" />
     <Content Include="Views\PageContent\PageAboutImage.cshtml" />
     <Content Include="Views\PageContent\PageCo-working.cshtml" />
+    <Content Include="Views\PageContent\PageMilan.cshtml" />
+    <Content Include="Views\PageContent\PageBlock.cshtml" />
     <None Include="Views\Web.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
