--- a/src/Feature/PageContent/serialization/Templates/PageContent/_HasPageContent.yml
+++ b/src/Feature/PageContent/serialization/Templates/PageContent/_HasPageContent.yml
@@ -14,7 +14,7 @@ SharedFields:
   Value: "{1930BBEB-7805-471A-A3BE-4858AC7CF696}"
 - ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
   Hint: __Sortorder
-  Value: 0
+  Value: 1
 - ID: "f7d48a55-2158-4f02-9356-756654404f73"
   Hint: __Standard values
   Value: "{9504365E-9A65-4F81-9023-A3928999F0B7}"
@@ -25,7 +25,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20140105T212332
+      Value: 20140105T192332Z
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
       Value: |
