--- a/src/Feature/Partners/code/Views/Web.config
+++ b/src/Feature/Partners/code/Views/Web.config
@@ -30,6 +30,7 @@
 
   <appSettings>
     <add key="webpages:Enabled" value="false" />
+    <add key="Lucene.Net.FSDirectory.class" value="Sitecore.Search.FSDirectory, Sitecore.Kernel" />
   </appSettings>
 
   <system.webServer>
