--- a/src/Feature/Partners/code/Sitecore.Feature.Partners.csproj
+++ b/src/Feature/Partners/code/Sitecore.Feature.Partners.csproj
@@ -126,6 +126,9 @@
     </Content>
     <Content Include="App_Config\Include\Feature\Feature.Partners.Serialization.config" />
     <Content Include="packages.config" />
+    <Content Include="App_Config\Include\Feature\Partners.DefaultIndexConfiguration.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Properties\PublishProfiles\Local.pubxml" />
     <Content Include="Views\Partners\PartnersList.cshtml" />
     <Content Include="Views\Partners\PartnersFilter.cshtml" />
@@ -141,6 +144,8 @@
     <None Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\PartnersController.cs" />
+    <Compile Include="Business\Search.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Templates.cs" />
   </ItemGroup>
@@ -162,7 +167,9 @@
       <Name>Sitecore.Foundation.SitecoreExtensions</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
