--- a/src/Feature/PageContent/serialization/Templates/PageContent/_HasImage/Image.yml
+++ b/src/Feature/PageContent/serialization/Templates/PageContent/_HasImage/Image.yml
@@ -4,6 +4,10 @@ Parent: "efdb20c3-0df4-4cf9-b183-cd14faee2a0c"
 Template: "e269fbb5-3750-427a-9149-7aa950b49301"
 Path: /sitecore/templates/Feature/PageContent/_HasImage/Image
 DB: master
+SharedFields:
+- ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
+  Hint: __Sortorder
+  Value: 100
 Languages:
 - Language: en
   Versions:
