--- a/src/Feature/ContactUs/serialization/Templates/ContactUs/_ContactForm.yml
+++ b/src/Feature/ContactUs/serialization/Templates/ContactUs/_ContactForm.yml
@@ -4,3 +4,14 @@ Parent: "ad87ea0b-9bd4-4998-b1bc-cd348cbc5c0a"
 Template: "ab86861a-6030-46c5-b394-e8f99e8b87db"
 Path: /sitecore/templates/Feature/ContactUs/_ContactForm
 DB: master
+SharedFields:
+- ID: "f7d48a55-2158-4f02-9356-756654404f73"
+  Hint: __Standard values
+  Value: "{19EB3D4D-6882-4EF5-8F24-FE0C930A54F9}"
+Languages:
+- Language: en
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
+      Value: "20180724T122155:636680317150280070Z"
