--- a/src/Feature/Urban/serialization/Templates/Urban/_HasContent/Content/Title.yml
+++ b/src/Feature/Urban/serialization/Templates/Urban/_HasContent/Content/Title.yml
@@ -1,16 +1,16 @@
 ﻿---
-ID: "7e484ca4-b7ff-4b3a-af89-354d73f4f4d0"
-Parent: "6f13477b-8cf3-44fa-bdd2-8a70fda9244a"
+ID: "30ac7984-6779-4751-99c3-1731332a5bfc"
+Parent: "ad4b71e8-cd9b-4848-a72a-d1c13e656de5"
 Template: "455a3e98-a627-4b40-8035-e683a0331ac7"
-Path: /sitecore/templates/Feature/Urban/_HasImage/Content/Image
+Path: /sitecore/templates/Feature/Urban/_HasContent/Content/Title
 DB: master
 SharedFields:
 - ID: "ab162cc0-dc80-4abf-8871-998ee5d7ba32"
   Hint: Type
-  Value: Image
+  Value: "Single-Line Text"
 - ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
   Hint: __Sortorder
-  Value: 100
+  Value: 50
 Languages:
 - Language: en
   Versions:
@@ -18,4 +18,4 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20180723T113325Z
+      Value: 20180725T092934Z
